--- a/style/styles.css
+++ b/style/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f8f9fa;
+    background-color:darkgray;
     margin: 0;
     padding: 0;
     display: flex;
@@ -10,7 +10,7 @@ body {
   }
   
   .container {
-    background-color: #ffffff;
+    background-color: #372b2b;
     padding: 2rem;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -20,7 +20,7 @@ body {
   }
   
   h1 {
-    color: #343a40;
+    color: aqua;
     margin-bottom: 0.5rem;
   }
   
@@ -57,7 +57,7 @@ body {
   
   button {
     background-color: #28a745;
-    color: white;
+    color:blanchedalmond;
     border: none;
     padding: 0.75rem 1.5rem;
     border-radius: 8px;
